# CHAPTER

./: .gitignore  CLAUDE.md  Compare_list_vars_from_meteoswiss.ods  README.md  convert_to_pressure_levels.py  functions_supermuc.sh  meteoswiss_variable_comparison.md  plot_anemoi_zarr.ipynb  plot_grib_output.ipynb  pyproject.toml  run_anemoi_pipeline.sh  wrf_anemoi_recipe.yaml  wrf_era5_comparison.py
conf/: pipeline.yaml
hpc/: convert_day.sh  convert_step.sh  dates.py  fetch_day.sh  fetch_month.sh  fetch_step.sh  orchestrator.sh  submit_pipeline.py  submit_step_pipeline.py
