[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "CHAPTER"
authors = [
    { name = "Luca Monaco", email = "luca.monaco@cimafoundation.org" }
]
maintainers = [
    { name = "Luca Monaco", email = "luca.monaco@cimafoundation.org" },
]
description = "CHAPTER reanalysis conversion pipeline: WRF to ECMWF GRIB1 and Anemoi ZARR formats"
requires-python = ">=3.10"
keywords = [
    "python", "wrf-python", "wrf", "forecast", "model",
    "weather research and forecasting", "interpolation",
    "plotting", "plots", "meteorology", "nwp",
    "numerical weather prediction", "diagnostic",
    "science", "numpy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
license = { text = "Apache-2.0" }
dynamic = [ "version" ]
dependencies = [
    "anemoi-datasets>=0.5.28",
    "cartopy>=0.25.0",
    "eccodes>=2.45.0",
    "eckitlib>=1.32.4.9",
    "ecmwf-api-client>=1.6.5",
    "fckitlib>=0.14.1.9",
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "netcdf4>=1.7.3",
    "numpy >=1.11, !=1.24.3",
    "setuptools>=61",
    "tornado>=6.5.4",
    "wrapt",
    "xarray",
]

[project.urls]
Repository = "https://github.com/meteocima/CHAPTER"

[tool.setuptools]
package-data = { "wrf" = ["data/psadilookup.dat"]}
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "wrf.version.__version__" }

[tool.scikit-build]
cmake.verbose = true
cmake.version = ">=3.18"
logging.level = "INFO"
minimum-version = "0.8"
wheel.packages = ["src/wrf"]

# To avoid stripping installed libraries
# Packages often want to do their own stripping
# SKBUILD_INSTALL_STRIP: "false"
# install.strip = false

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/wrf/version.py"
